--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,62 @@
-"frontend/node_modules/.cache" 
+# Node dependencies
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Frontend build outputs
+frontend/build/
+frontend/dist/
+frontend/.cache/
+frontend/.parcel-cache/
+frontend/.vite/
+
+# Backend virtual envs (Python)
+backend/env/
+backend/.venv/
+.venv/
+venv/
+ENV/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env files and local secrets
+.env
+.env.*
+backend/.env
+backend/credentials/*.json
+
+# Uploads and generated outputs
+backend/uploads/
+backend/outputs/
+backend/output_*.txt
+
+# Coverage
+coverage/
+frontend/coverage/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor/Tooling
+.idea/
+.vscode/
+*.swp
+
+# Temporary files
+*.tmp
+*.temp
+
+backend/credentials/handwritten-reader-key.json
+
+# Python bytecode and cache
+**/__pycache__/
+*.py[cod]
+
+# Lint/Build caches
+.eslintcache
